# hypr-agent

./: .gitignore  README.md  config.yaml  pyproject.toml  run.sh
skills/: _template.yaml  clipboard.yaml  notify.yaml  weather.yaml
src/: cli.py  config.py  main.py
src/agent/: loop.py  memory.py  profile.py  prompt.py
src/api/: models.py  routes.py
src/llm/: client.py
src/tools/: __init__.py  _template.py  code.py  document.py  filesystem.py  git.py  hyprland.py  introspect.py  pdf_reader.py  screenshot.py  search.py  self_repair.py  shell.py  system.py  yaml_skill.py
static/css/: style.css
static/js/: app.js
templates/: index.html
