[project]
name = "hypr-agent"
version = "0.1.0"
description = "Lightweight local agentic AI with web UI — optimized for Ryzen 5 3500U / 16GB RAM"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.2.1",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
search = ["duckduckgo-search>=5.0.0"]

[tool.ruff]
line-length = 100
target-version = "py310"
